--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,117 +22,8 @@
  <!-- for Isotope -->
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
 
-
-<!-- product isotope and page number on gadget page -->
+<!-- Currency on Show page of Gadgets -->
 <script>
-$(document).ready( function() {
-  var currentFilter="*";
-  
-  var datafilder;
-  
-  var postscount;
-  
-  var perpage;
-  
-  var page_post=10;
-
-  //isotope create
-  var itemSelector = '.grid-item'; 
-  var $main_container = $('#main_container').isotope({
-    itemSelector: itemSelector,
-    masonry: {
-      columnWidth: itemSelector,
-      isFitWidth: true
-    }
-  });
-  var selector = itemSelector;
-  
-  function changeFilter(selector){
-    $main_container.isotope({
-      filter: selector
-    });
-  }
-  function gopage(n){
-    var selector = itemSelector;
-    if(currentFilter!="*"){
-      selector =selector+'[data-filter="'+currentFilter+'"]';
-    }
-    selector=selector+'[data-page="'+n+'"]';
-    changeFilter(selector);
-  }
-  
-  function paginclass(){
-    if(currentFilter!="*"){
-      postscount=$(".grid-item[data-filter="+currentFilter+"]").length;
-    }else{
-      postscount=$(".grid-item").length;
-    }
-    
-    perpage=Math.ceil(postscount/page_post);
-    var selector = itemSelector;
-    if(currentFilter!="*"){
-      selector =selector+'[data-filter="'+currentFilter+'"]';
-    }
-    
-    var item=1;
-    var page=1;
-    $main_container.children(selector).each(function(){
-      if( item > page_post ) {
-        page=page+1;
-        item = 1;
-      }
-      $(this).attr("data-page", page);
-      item=item+1;
-    });
-  }
-
-  function paginclume(){
-    $(".page_pagin").remove();
-
-    var pagecon=$("<div class='page_pagin'></div>");
-    
-    var page_number;
-    var i=1;
-    while(i<=perpage){
-      page_number=$("<a href='javascript:void(0);' data-page="+i+"></a>");
-      page_number.html(i);
-      i=i+1;
-      pagecon.append(page_number);
-    }
-    
-    
-    $('#main_container').after(pagecon);
-
-  }
-
-
-  paginclass();
-  gopage(1);
-  paginclume();
-  $(".page_pagin a").click(function(){
-    var page_number=$(this).attr("data-page");
-    gopage(page_number);
-    console.log("page_number",page_number);
-  });
-  
-  $('.filters a').click(function(){
-    currentFilter=$(this).attr("data-filter");
-    
-    paginclass();
-    gopage(1);
-    paginclume();
-  $(".page_pagin a").click(function(){
-    var page_number=$(this).attr("data-page");
-    gopage(page_number);
-    console.log("page_number",page_number);
-  });
-  });
-});
-</script>
-
-
-<script>
-
 function convertCurrency() {
   let fromCurrency = encodeURIComponent($('#from').val());
   let toCurrency = encodeURIComponent($('#to').val());
@@ -186,6 +77,28 @@ function convertCurrency() {
 }
 
 
+</script>
+
+<!-- Sidebar Tab On Show Page -->
+<script>
+  //<![CDATA[
+jQuery(document).ready(function($){ $(".multitab-widget-content-widget-id").hide(); $("ul.multitab-widget-content-tabs-id li:first a").addClass("multitab-widget-current").show(); $(".multitab-widget-content-widget-id:first").show(); $("ul.multitab-widget-content-tabs-id li a").click(function() { $("ul.multitab-widget-content-tabs-id li a").removeClass("multitab-widget-current a"); $(this).addClass("multitab-widget-current"); $(".multitab-widget-content-widget-id").hide(); var activeTab = $(this).attr("href"); $(activeTab).fadeIn(); return false; }); });
+//]]>
+</script>
+
+<!-- Responsive Main Menu -->
+<script>
+  $(document).ready(function() {
+  $('.eb_nav .menu-trigger').click(function() {
+    $('.eb_nav ul').slideToggle(500);
+  });//end slide toggle
+  
+  $(window).resize(function() {   
+    if (  $(window).width() > 500 ) {     
+      $('.eb_nav ul').removeAttr('style');
+     }
+  });//end resize
+});//end ready
 </script>
 
 
