--- a/app/assets/stylesheets/gadgets.scss
+++ b/app/assets/stylesheets/gadgets.scss
@@ -69,6 +69,63 @@ header {
   width: 50%;
 }
 
+/* --------------------
+  Responsive Main Menu
+ -------------------- */
+.eb_nav {
+  width: 100%;
+  background-color:#2ebfac
+}
+
+.search_header {
+  margin-top: 35em;
+}
+.search_header h1 {
+  text-align: center;
+}
+
+.eb_nav ul {
+  padding: 0em;
+}
+
+.eb_nav ul li {
+  display:inline-block;  
+  padding: 0em;
+  margin: 0em;
+}
+
+.eb_nav a {
+  color:#fff;
+  display:block;
+  text-decoration: none;
+  text-align: center;
+  padding:20px 30px;
+ }
+
+.eb_nav a:hover {
+  background: #fd887a;
+}
+
+.eb_nav .menu-trigger {
+  display:none;
+  color:#fff;
+}
+@media screen and (max-width: 500px) {
+  .eb_nav .menu-trigger {
+    display:block;
+  }
+  .discount_input {
+    margin-top: 1em;
+  }
+  .eb_nav ul li {
+    display:block;
+    border-top:1px #79896D solid;    
+  }
+  .eb_nav ul {
+    display:none;
+  }
+}
+
 /* =============== Gadget show =============== */
 .show_image, 
 .show_content  {
@@ -150,6 +207,117 @@ header {
 .krw {
   width: 4.3em;
   border: none;
+}
+
+/* ---------------
+ Sidebar Tabs
+ --------------- */
+.sidebar_container {
+  max-width: 310px;
+  margin: 12% auto;
+  padding: 0;
+  box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
+  /* font-family: 'Open Sans', sans-serif; */
+}
+/* Multi Tab Sidebar */
+.multitab-section {
+  display: inline-block;
+  text-transform: uppercase;
+  width: 100%;
+}
+.multitab-section p {
+  display: inline-block;
+  background: #fff;
+  text-transform: lowercase;
+  font-size: 14px;
+  padding: 20px 5px;
+  margin: 0;
+
+}
+.multitab-widget {
+  list-style: none;
+  margin: 0 0 10px;
+  padding: 0
+}
+.multitab-widget li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  float: left
+}
+.multitab-widget li a {
+  background: #2ebfac;
+  color: #fff;
+  display: block;
+  padding: 15px;
+  font-size: 13px;
+  text-decoration: none
+}
+.multitab-tab {
+  width: 33.3%;
+  text-align: center
+}
+.multitab-section h2,
+.multitab-section h3,
+.multitab-section h4,
+.multitab-section h5,
+.multitab-section h6 {
+  display: none;
+}
+.multitab-widget li a.multitab-widget-current {
+  padding-bottom: 20px;
+  margin-top: -10px;
+  background: #fff;
+  color: #444;
+  text-decoration: none;
+  border-top: 5px solid #2ebfac;
+  font-size: 14px;
+  text-transform: capitalize
+}
+
+/* ---------------
+ Content in Sidebar Tabs
+ --------------- */
+ul#side-rcnt-thumb-post-list {
+list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#side-rcnt-thumb-post-list li {
+  overflow: hidden;
+  border-top: 1px solid #CCC;
+  padding-top: 15px;
+  position: relative;
+  min-height: 76px;
+}
+.srtpl-l {
+  float: left;
+  width: 30%;
+  margin-right: 15px;
+}
+.srtpl-a {
+  display: block;
+  outline: 0!important;
+  font-weight: 400;
+}
+#side-rcnt-thumb-post-list img {
+  max-width: 100%;
+  height: 4em;
+  vertical-align: middle;
+  border: 0;
+  object-fit: cover;
+}
+.srtpl-r {
+  margin-left: 90px;
+}
+.srtpl-n {
+  display: block;
+  color: #343534;
+  line-height: 1.2;
+  font-weight: 600;
+  font-size: 13px;
+  outline: 0!important;
+  text-decoration: none;  
 }
 
 /* =============== Gadget From =============== */
