--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
 
 <!-- Currency on Show page of Gadgets -->
-<script>
+<!-- <script>
 function convertCurrency() {
   let fromCurrency = encodeURIComponent($('#from').val());
   let toCurrency = encodeURIComponent($('#to').val());
@@ -77,7 +77,7 @@ function convertCurrency() {
 }
 
 
-</script>
+</script> -->
 
 <!-- Sidebar Tab On Show Page -->
 <script>
