--- a/app/assets/stylesheets/gadgets.scss
+++ b/app/assets/stylesheets/gadgets.scss
@@ -48,7 +48,7 @@ header {
 }
 .main_price {
   float: left;
-  width: 50%;
+  width: 30%;
   margin-top: 1.4em;
 }
 .main_price p:nth-child(1) {
@@ -66,7 +66,7 @@ header {
 }
 .main_button {
   float: right;
-  width: 50%;
+  width: 63%;
 }
 
 /* --------------------
@@ -158,6 +158,7 @@ header {
 .gadget_source {
   border: 2px solid;
   padding: 1em;
+  margin-top: 2em;
 }
 .show_price ul,
 .show_admin_wrap ul {
