--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,3 +3,112 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+
+.dis_grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -0.8rem;
+}
+.dis_card {
+  width: 23%;
+  margin: 1%;
+  background: #fff;
+  overflow: hidden;
+  border-radius: .5rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 2px 5px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 300ms;
+}
+@media screen and (max-width: 800px) {
+  .dis_card,
+  .dis_card_ourpick {
+    display: flex;
+    width: calc(100% - 1.6rem);
+  }
+}
+.dis_card:hover,
+.dis_card_ourpick:hover {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05), 0 5px 15px rgba(0, 0, 0, 0.05);
+}
+.dis_card--image {
+  position: relative;
+  width: 100%;
+  /* padding-bottom: 100%; */
+  overflow: hidden;
+}
+.dis_card--content {
+  padding: 0 0.5rem;
+  margin-bottom: 1em;
+}
+.dis_card--content ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0em;
+}
+.dis_card--content ul {
+  margin: 0em;
+  text-align: center;
+  padding: 0em;
+}
+.dis_price li:nth-child(1) {
+  font-size: 1.3em;
+}
+.dis_price li:nth-child(2) {
+  text-decoration: line-through;
+}
+.feedback {
+  text-align: center;
+}
+.feedback p {
+  margin: 0em;
+}
+.dis_btn li {
+  padding: 0 0.7em;
+  margin-bottom: 0.3em;
+}
+.dis_btn li:nth-child(1) {
+  border: 2px dotted #2ebfac;
+  color: #2ebfac;
+  padding: 0 -1em;
+} 
+.dis_btn li:nth-child(2) {
+  background-color: #2ebfac;
+  padding: 0 1em;
+  border-radius: 0.7em;
+}
+.dis_btn a {
+  color: white;
+}
+.dis_card--category {
+  font-size: .8em;
+  letter-spacing: .1ch;
+  padding-top: 1em;
+  font-weight: bold;
+  color: #999;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 800px) {
+.dis_card--image {
+    width: 25%;
+    height: 9em;
+    min-width: 40%;
+    /* padding-bottom: 25%; */
+  }
+}
+.dis_card--image img {
+  /* position: absolute; */
+  width: 100%;
+  height: 12em;
+  object-fit: contain;
+}
+@media screen and (max-width: 800px) {
+  .dis_card--image img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    padding: 0.5em;
+  }
+  .dis_container h1 {
+    font-size: 14px;
+  }
+}
