--- a/app/views/gadgets/_source.html.erb
+++ b/app/views/gadgets/_source.html.erb
@@ -1,32 +1,17 @@
 <ul>
   <% if @gadget.gg_source_01.present? %>
-   <li><a href="#"><%= @gadget.gg_source_01 %></a></li>
+   <li><a href="<%= @gadget.gg_source_link_01 %>"><%= @gadget.gg_source_01 %></a></li>
   <% end %>
   <% if @gadget.gg_source_02.present? %>
-   <li><a href="#"><%= @gadget.gg_source_02 %></a></li>
+   <li><a href="<%= @gadget.gg_source_link_02 %>"><%= @gadget.gg_source_02 %></a></li>
   <% end %>
   <% if @gadget.gg_source_03.present? %>
-   <li><a href="#"><%= @gadget.gg_source_03 %></a></li>
+   <li><a href="<%= @gadget.gg_source_link_03 %>"><%= @gadget.gg_source_03 %></a></li>
   <% end %>
   <% if @gadget.gg_source_04.present? %>
-   <li><a href="#"><%= @gadget.gg_source_04 %></a></li>
+   <li><a href="<%= @gadget.gg_source_link_04 %>"><%= @gadget.gg_source_04 %></a></li>
   <% end %>
   <% if @gadget.gg_source_05.present? %>
-   <li><a href="#"><%= @gadget.gg_source_05 %></a></li>
-  <% end %>
-  <% if @gadget.gg_source_06.present? %>
-   <li><a href="#"><%= @gadget.gg_source_06 %></a></li>
-  <% end %>
-  <% if @gadget.gg_source_07.present? %>
-   <li><a href="#"><%= @gadget.gg_source_07 %></a></li>
-  <% end %>
-  <% if @gadget.gg_source_08.present? %>
-   <li><a href="#"><%= @gadget.gg_source_08 %></a></li>
-  <% end %>
-  <% if @gadget.gg_source_09.present? %>
-   <li><a href="#"><%= @gadget.gg_source_09 %></a></li>
-  <% end %>
-  <% if @gadget.gg_source_10.present? %>
-   <li><a href="#"><%= @gadget.gg_source_10 %></a></li>
+   <li><a href="<%= @gadget.gg_source_link_05 %>"><%= @gadget.gg_source_05 %></a></li>
   <% end %>
 </ul>
