--- a/app/views/gadgets/edit.html.erb
+++ b/app/views/gadgets/edit.html.erb
@@ -1,5 +1,5 @@
 <div id="page-wrapper">
- <%= render 'shared/header' %>
+ <%= render 'shared/header_show' %>
   
  <div class="gadget_form">
   <%= render 'form' %>
