--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -1,5 +1,5 @@
 <div id="page-wrapper">
- <%= render 'shared/header' %>
+  <%= render 'shared/header_show' %>
 
    <section id="main">
     <div class="gadget_container container">
@@ -14,6 +14,8 @@
      <div class="row">
 
       <div id="content" class="col-8 col-12-medium">
+       <h2>특징</h2>
+
        <h2>Summary</h2>
        <%= render 'gadgets/procon' %>
 
@@ -33,6 +35,9 @@
         <h2>Source</h2>
         <%= render 'gadgets/source' %>
        </div>
+
+       <h1>Create Comments</h1>
+       <h2>여러분의 생각은 어떻신가요?</h2>
       </div><!-- /#content -->
 
      <div id="sidebar" class="col-4 col-12-medium">
