--- a/app/assets/stylesheets/gadgets.scss
+++ b/app/assets/stylesheets/gadgets.scss
@@ -68,10 +68,13 @@ header {
   float: right;
   width: 63%;
 }
+.search_box {
+  margin-top: 2em;
+}
 
-/* --------------------
-  Responsive Main Menu
- -------------------- */
+/* ----------------------------
+  Responsive Main Category Menu
+ ---------------------------- */
 .eb_nav {
   width: 100%;
   background-color:#2ebfac
@@ -127,6 +130,9 @@ header {
 }
 
 /* =============== Gadget show =============== */
+.show_container {
+  padding-top: -10em;
+}
 .show_image, 
 .show_content  {
   float: left;
@@ -218,7 +224,6 @@ header {
   margin: 12% auto;
   padding: 0;
   box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
-  /* font-family: 'Open Sans', sans-serif; */
 }
 /* Multi Tab Sidebar */
 .multitab-section {
