--- a/app/views/gadgets/_content.html.erb
+++ b/app/views/gadgets/_content.html.erb
@@ -7,7 +7,15 @@
  <div class="show_content">
   <h1><%= @gadget.gg_title %></h1>
   <h3>What's This?</h3>
-  <p><%= @gadget.gg_intro %></p>
+  <p><%= @gadget.gg_intro %></p><br/>
+
+  <h3>Where Can I Get It?</h3>
+  <p><%= @gadget.gg_title %>은(는) <%= @gadget.gg_from %>에서 $<%= @gadget.gg_aprice%>에 구매 가능합니다.</p><br/>
+
+  <div>
+   <p>구매 방법 자세히 보기</p>
+  </div>
+
   <div class="show_admin_wrap">
     <ul>
       <li><p><%= @gadget.gg_from %></p></li>
@@ -55,7 +63,7 @@
     <div class="show_button main_button">
       <div class="col-12">
         <ul class="show_btn actions">
-          <li><a href="<%= @gadget.gg_url %>" class="button">Check it Out</a></li>
+          <li><a target="_blank" href="<%= @gadget.gg_url %>" class="button">Check it Out</a></li>
         </ul>
       </div>
     </div>
