--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -17,7 +17,7 @@
        <h2>특징</h2>
 
        <h2>Summary</h2>
-       <%= render 'gadgets/procon' %>
+       <!-- < render 'gadgets/procon' > -->
 
        <% if @gadget.gg_youtube01.present? %>
        <div class="video-container">
