--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,56 +1,31 @@
-<div id="page-wrapper">
-  <%= render 'shared/header' %>
+<header>
+  <div class="wrap">
+    <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
+    <div class="gnb_pc clearfix">
+      <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
 
-    <div class="container">
-      <div class="eb_nav">
-        <a href="#" class="menu-trigger">Menu</a>
-        <ul>
-          <li><%= link_to "All", root_path %></li>
-          <% Category.all.each do |category| %>
-           <li><%= link_to category.name, gadgets_path(category: category.name) %></li>
-          <% end %>
-          <li><%= link_to "New Gadget", new_gadget_path %></li>
-        </ul>
-     </div>
+      <div class="visual">
+        <h1><a href="/"><img src="/assets/visual_01.jpg" alt="ohigottabuythis" /></a></h1>
+      </div>
+
+      <ul class="clearfix">
+        <li><a href="/gadgets/index">CATEGORY<span>,</span></a></li>
+        <li><a href="/recommends/">FEATURED<span>,</span></a></li>
+        <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
+      </ul>      
     </div>
+    
+    <div class="gnb_m">      
+      <ul class="clearfix">
+        <li><a href="/">HOME<span>,</span></a></li> 
+        <li><a href="/gadgets/index">CATEGORY<span>,</span></a></li>
+        <li><a href="/recommends/">FEATURED<span>,</span></a></li>
+        <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
+      </ul>
+      <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
+      
+    </div><!--./gnb_m-->
+  </div><!--./wrap-->
+</header>
 
-    <section id="features">
-      <div class="container">
-        <div class="row aln-center">
 
-          <% @gadgets.each do |gadget| %>
-            <div class="col-4 col-6-medium col-12-small">
-              <section>
-                <header>
-                  <h3 class="main_title"><%= link_to gadget.gg_title, gadget %></h3>
-                </header>
-                
-                <%= link_to (image_tag gadget.gg_img), gadget, {:class =>"main_gadget image featured"} %>
-              
-                <p class="main_intro"><%= gadget.gg_intro %></p>
-                <div class="main_price_wrap">
-                  <div class="main_price">
-                    <p>$<%= gadget.gg_aprice %></p>
-                    <ul>
-                     <li>#<%= gadget.gg_from %></p></li>   
-                    </ul>
-                  </div>
-                  <div class="main_button">
-                    <div class="col-12">
-                      <ul class="actions">
-                        <li><a target="_blank" href="<%= gadget.gg_url %>" class="button">Check it Out</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </section>
-            </div>
-          <% end %>
-        </div><!--/.row aln-center-->
-        <%= paginate @gadgets %>
-      </div><!--/.container-->
-    </section>
-
-   <!-- render 'gadgets/blog' -->
- <%= render 'shared/footer' %>
-</div><!-- /.page-wrapper -->
