--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -5,7 +5,7 @@
       <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
 
       <div class="visual">
-        <h1><a href="/"><img src="/assets/visual_01.jpg" alt="ohigottabuythis" /></a></h1>
+        <h1><a href="/"><img src="/assets/visual.jpg" alt="ohigottabuythis" /></a></h1>
       </div>
 
       <ul class="clearfix">
