--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="clearfix">
   <div class="wrap">
     <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
     <div class="gnb_pc clearfix">
