--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,11 +1,11 @@
 <header class="clearfix">
   <div class="wrap">
-    <button class="gnb_open2"><img src="/visual_01.png"></img></button>
+    <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
     <div class="gnb_pc clearfix">
       <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
 
       <div class="visual">
-        <h1><a href="/"><img src="/assets/visual_01.jpg" alt="ohigottabuythis" /></a></h1>
+        <h1><a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis" /></a></h1>
       </div>
 
       <ul class="clearfix">
